--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,15 @@
 header {
     background: linear-gradient(to bottom , #11283E, #4B7296); 
-    height: 300px;
     color: white;
     align-items: start;
     justify-content: center;
+    height: 100%;
   }
+
+body{
+  margin: 0;
+  padding: 0;
+}
 
   .navbar {
     display: flex;
@@ -13,8 +18,38 @@ header {
   }
 
   .textHeader{
-    text-align: center;
+    text-align: start;
+    margin-left: 100px;
   }
+
+  .textHeader h1{
+    font-size: 50px;
+  }
+
+  .textHeader p{
+    font-size: 20px;
+  }
+
+  .imageHeader{
+    width: 620px;
+  }
+
+  .orange-button {
+    background-color:  #FE6E0E;
+    color: white;
+    border: none;
+    padding: 12px 24px;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+  
+  .orange-button:hover {
+    background-color: white;
+    color: #FE6E0E;
+  }
+  
 
   .content-navBar{
     display: flex;
@@ -44,7 +79,7 @@ header {
   }
   
   .menu a:hover {
-    color: #fca311; 
+    color:  #FE6E0E; 
   }
 
   .divider {
@@ -57,8 +92,9 @@ header {
   .organizeHeader {
     display: flex;
     justify-content: space-between; 
+    align-items: center;
     gap: 20px; 
-    padding: 50px;
+    padding: 20px;
   }
   
   .organizeHeader > div {
@@ -74,8 +110,16 @@ header {
     }
 
     .text-content{
-        padding: 0 50px 0 50px;
+        padding: 0 80px 0 80px;
     }
+
+    .text-content h1 {
+      font-size:30px;
+  }
+
+    .text-content p {
+      font-size:25px;
+  }
   
     .features {
         display: flex;
@@ -89,10 +133,27 @@ header {
       .feature {
         flex: 1;
         max-width: 300px;
+        padding: 8px;
+        align-items: center;
+        border: 1px solid black;
+        border-radius: 20px;
+        box-shadow: 9px 9px 0px rgba(0, 0, 0, 0.2);
+      }
+
+      .feature h3{
+        font-size: 25px;
+      }
+
+      .feature p{
+        font-size: 20px;
       }
 
       .care-content{
-        padding: 30px 50px 30px 50px;
+        padding: 30px 80px 30px 80px;
+      }
+
+      .care-content p{
+        font-size: 25px;
       }
       
       .icon {
@@ -111,20 +172,15 @@ header {
       .care-steps {
         text-align: center;
         background-color: #B5B5B5;
-        width: 100vw;
       }
       
       .care-steps {
-        padding: 50px 20px;
-        max-width: 1200px;
         margin: 0 auto;
       }
       
       .care-steps h2 {
         text-align: center;
-        font-size: 28px;
-        color: #1b2e3c;
-        margin-bottom: 60px;
+        font-size: 35px;
       }
       
       .step {
@@ -140,6 +196,8 @@ header {
         width: 100%;
         max-width: 700px;
         height: auto;
+        display: flex;
+        flex: 2;
       }
       
       .text {
@@ -149,7 +207,7 @@ header {
       }
       
       .text h3 {
-        font-size: 22px;
+        font-size: 30px;
         margin-bottom: 10px;
         color: #000;
       }
@@ -157,6 +215,8 @@ header {
       .text p {
         color: #000;
         line-height: 1.5;
+        display: flex;
+        flex: 1;
       }
 
       .custom-footer {
