--- a/styles.css
+++ b/styles.css
@@ -166,6 +166,25 @@ section {
   font-size: 1rem;
 }
 
+.full-white-section {
+  background-color: white;
+  width: 100vw;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
+  padding: 60px 0;
+  font-size: 1.2rem;
+  line-height: 1.8;
+}
+
+.full-white-section .container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
 .dual {
   display: flex;
   flex-wrap: wrap;
